--- a/Web_Server/fe/src/App.scss
+++ b/Web_Server/fe/src/App.scss
@@ -6,20 +6,29 @@ $tablet: 768px;
   }
 }
 
-.container {
-  margin: 100px 50px;
+.container-me {
+  margin: 40px 100px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  background: #EEEEEE;
+  padding: 20px;
   @include mobile {
-    margin: 60px 10px;
+    margin: 20px 0px;
   }
 
   .margin-top-20 {
     margin-top: 20px;
   }
-  .title {
-    font-size: 36px;
-    font-weight: 700;
+
+  .like-anchor {
+    cursor:pointer;
+    color: #069;
+  }
+
+  .like-anchor:hover {
+    text-decoration:none;
+    text-decoration:underline;
   }
 
   .body {
@@ -31,7 +40,7 @@ $tablet: 768px;
       display: flex;
       // flex: 1;
       width: 100%;
-      justify-content: space-between;
+      justify-content: center;
       .input-box-pssm {
         display: flex;
         // flex: 1;
@@ -43,22 +52,67 @@ $tablet: 768px;
         width: 34%;
       }
     }
+  }
 
-    .result-container {
-      margin-top: 20px;
-      background-color: skyblue;
-      height: auto;
-      padding: 20px;
-      width: 600px;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
+  .result-container {
+    margin-top: 20px;
+    background-color: skyblue;
+    height: auto;
+    padding: 20px;
+    width: 600px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 
-      .red {
-        color: red;
-      }
-      .green {
-        color: green;
-      }
+    .red {
+      color: red;
     }
+    .green {
+      color: green;
+    }
+  }
+}
+.dont-break-out {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
+}
+
+.page-footer {
+  background: #EEEEEE;
+  padding: 20px 40px 0 40px;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  .flex-1 {
+    flex: 1;
+  }
+}
+
+.file-uploader {
+  background-color: white;
+  padding: 0 10px;
+  border: 1px solid black;
+}
+
+.example {
+  width: 70% !important;
+  max-width: 100% !important;
+
+  .body {
+    height: 400px;
+    overflow-y: auto;
   }
 }
